k8s/analytics/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-container
        image: mrmonster786/rnr-backend-base:latest 
        imagePullPolicy: Always
        args: ["python", "-m", "uvicorn", "src.analytics.main:app", "--host", "0.0.0.0", "--port", "8008"]
        ports:
        - containerPort: 8008
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
