k8s/analytics/analytics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /v1/analytics/$2
spec:
  ingressClassName: nginx
  rules:
  - host: api.rnr.local
    http:
      paths:
      - path: /v1/analytics(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: analytics-service
            port:
              number: 8008
